# shell-poe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cicd.yml
poe_shell/: __init__.py  __main__.py  config.py  poe_client.py  roles.py  utils.py
poe_shell/handlers/: chat_handler.py  handler.py  one_off_handler.py  shell_handler.py
